// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullBleed /> by default should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  className=""
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
        willFill={true}
      >
        <LazyLoader
          componentProps={
            Object {
              "isFluid": true,
              "isLazyLoaded": true,
              "placeholderImageUrl": null,
              "sizes": null,
              "willFill": true,
            }
          }
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "srcSet": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            className=""
            hasRoundedCorners={false}
            imageTitle="Image Title"
            imageUrl=""
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            placeholderImageUrl={null}
            sizes={null}
            srcSet={null}
            willFill={true}
          >
            <figure
              alt="Image Title"
              className="responsive-image willFill"
              data-testid="responsive-image"
              style={
                Object {
                  "backgroundImage": "url(null)",
                }
              }
            >
              <Image
                as="img"
                avatar={false}
                circular={false}
                data-testid="responsive-image-img"
                fluid={true}
                onError={[Function]}
                onLoad={[Function]}
                rounded={false}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  className="ui fluid image"
                  data-testid="responsive-image-img"
                  onError={[Function]}
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`hasGradient\` is passed should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  className=""
  hasGradient={true}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed has-gradient"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-gradient"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
        willFill={true}
      >
        <LazyLoader
          componentProps={
            Object {
              "isFluid": true,
              "isLazyLoaded": true,
              "placeholderImageUrl": null,
              "sizes": null,
              "willFill": true,
            }
          }
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "srcSet": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            className=""
            hasRoundedCorners={false}
            imageTitle="Image Title"
            imageUrl=""
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            placeholderImageUrl={null}
            sizes={null}
            srcSet={null}
            willFill={true}
          >
            <figure
              alt="Image Title"
              className="responsive-image willFill"
              data-testid="responsive-image"
              style={
                Object {
                  "backgroundImage": "url(null)",
                }
              }
            >
              <Image
                as="img"
                avatar={false}
                circular={false}
                data-testid="responsive-image-img"
                fluid={true}
                onError={[Function]}
                onLoad={[Function]}
                rounded={false}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  className="ui fluid image"
                  data-testid="responsive-image-img"
                  onError={[Function]}
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`props.children > 0\` should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  className=""
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed has-children"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-children"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
        willFill={true}
      >
        <LazyLoader
          componentProps={
            Object {
              "isFluid": true,
              "isLazyLoaded": true,
              "placeholderImageUrl": null,
              "sizes": null,
              "willFill": true,
            }
          }
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "srcSet": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            className=""
            hasRoundedCorners={false}
            imageTitle="Image Title"
            imageUrl=""
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            placeholderImageUrl={null}
            sizes={null}
            srcSet={null}
            willFill={true}
          >
            <figure
              alt="Image Title"
              className="responsive-image willFill"
              data-testid="responsive-image"
              style={
                Object {
                  "backgroundImage": "url(null)",
                }
              }
            >
              <Image
                as="img"
                avatar={false}
                circular={false}
                data-testid="responsive-image-img"
                fluid={true}
                onError={[Function]}
                onLoad={[Function]}
                rounded={false}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  className="ui fluid image"
                  data-testid="responsive-image-img"
                  onError={[Function]}
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
      🏛
    </div>
  </Segment>
</FullBleed>
`;
